--- a/metaverse.html
+++ b/metaverse.html
@@ -118,7 +118,7 @@
 
     </section>
 
-    <!-- footer section -->
+    <!-- Footer section -->
     <footer class="footer-section bg-black p-4">
         <div class="container">
             <div class="row spad">
@@ -144,34 +144,33 @@
                     data-aos-duration="1000" data-aos-once="true">
                     <h6 class="widget-title">Our Product</h6>
                     <ul>
-                        <li><a href="#" class="text-decoration-none text-white">CSC Chain</a> </li>
-                        <li><a href="#" class="text-decoration-none text-white">CFY Coin</a></li>
-                        <li><a href="#" class="text-decoration-none text-white">Cryptofy Games</a></li>
-                        <li><a href="#" class="text-decoration-none text-white">Cryptofy Ecosystem</a></li>
+                        <p><a href="#" class="text-decoration-none text-white">CSC Chain</a> </p>
+                        <p><a href="#" class="text-decoration-none text-white">CFY Coin</a></p>
+                        <p><a href="#" class="text-decoration-none text-white">Cryptofy Games</a></p>
+                        <p><a href="#" class="text-decoration-none text-white">Cryptofy Ecosystem</a></p>
                     </ul>
                 </div>
                 <div class="col-md-6 col-lg-2 offset-lg-1 footer-widget mt-5" data-aos="fade-up" data-aos-delay="200"
                     data-aos-duration="1000" data-aos-once="true">
                     <h6 class="widget-title text-left">Pupular Tags</h6>
                     <ul>
-                        <li><a href="#" class="text-decoration-none text-white">Metaverse</a></li>
-                        <li><a href="#" class="text-decoration-none text-white">Virtual Reality</a></li>
-                        <li><a href="#" class="text-decoration-none text-white">Technology</a></li>
-                        <li><a href="#" class="text-decoration-none text-white">Security</a></li>
-                        <li><a href="#" class="text-decoration-none text-white">Education</a></li>
-                        <li><a href="#" class="text-decoration-none text-white">Business</a></li>
+                        <p><a href="#" class="text-decoration-none text-white">Metaverse</a></p>
+                        <p><a href="#" class="text-decoration-none text-white">Virtual Reapty</a></p>
+                        <p><a href="#" class="text-decoration-none text-white">Technology</a></p>
+                        <p><a href="#" class="text-decoration-none text-white">Security</a></p>
+                        <p><a href="#" class="text-decoration-none text-white">Education</a></p>
+                        <p><a href="#" class="text-decoration-none text-white">Business</a></p>
                     </ul>
                 </div>
                 <div class="col-md-6 col-lg-3 footer-widget mt-5 pl-lg-5 pl-3" data-aos="fade-up" data-aos-delay="150"
                     data-aos-duration="1000" data-aos-once="true">
                     <h6 class="widget-title">Official</h6>
 
-                    <li><a href="https://cryptofy.digital/" class="text-decoration-none text-white">cryptofy.digtal</a>
-                    </li>
-                    <li><a href="https://cryptofydigital.com/"
+                    <p style="margin: 0;"><a href="https://cryptofy.digital/"
+                            class="text-decoration-none text-white">cryptofy.digtal</a>
+                    </p>
+                    <p style="margin: 0;"><a href="https://cryptofydigital.com/"
                             class="text-decoration-none text-white">cryptofydigital.com</a></li>
-
-                    <a href="#top" class="text-decoration-none text-white btn btn-sm btn-block">Back to top</a>
                 </div>
             </div>
 
