--- a/minineral.html
+++ b/minineral.html
@@ -134,7 +134,7 @@
                     <h3><img src="image/icon.png" class="img-fluid" alt="">Cryptofy Coin</h3>
                     <h3 class="pt-5">Get In Touch</h3>
 
-                    <a href="hello@cryptofydigital.com" class="text-decoration-none text-white"><i
+                    <a href="https://hello@cryptofydigital.com" class="text-decoration-none text-white"><i
                             class="ti-email text"></i>
                         hello@cryptofydigital.com</a>
                     <br>
