--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
             <div class="col-md-12 home-container-box-img">
                 <p class="text-center mt-1"><img data-aos="flip-left" data-aos-easing="ease-out-cubic"
-                        data-aos-delay="1000" data-aos-duration="1000" data-aos-once="true" src="image/cfycoin.png"
+                        data-aos-delay="1000" data-aos-duration="1000" data-aos-once="true" src="image/icon.png"
                         class="img-fluid"></p>
             </div>
 
