--- a/benefit.html
+++ b/benefit.html
@@ -125,9 +125,19 @@
                     <h3><img src="image/icon.png" class="img-fluid" alt="">Cryptofy Coin</h3>
                     <h3 class="pt-5">Get In Touch</h3>
 
-                    <a href="https://hello@cryptofydigital.com" class="text-decoration-none text-white"><i
+                    <a href="https://info@cryptofycoin.com" class="text-decoration-none text-white"><i
                             class="ti-email text"></i>
-                        hello@cryptofydigital.com</a>
+                        info@cryptofycoin.com</a>
+                    <br>
+
+                    <a href="https://info@cryptofydigital.com" class="text-decoration-none text-white"><i
+                            class="ti-email text"></i>
+                        info@cryptofydigital.com</a>
+                    <br>
+
+                    <a href="https://Hello@cryptofydigital.com" class="text-decoration-none text-white"><i
+                            class="ti-email text"></i>
+                        Hello@cryptofydigital.com</a>
                     <br>
 
                     <a href="" class="text-decoration-none text-white"><i class="ti-location-pin"></i> Dubai, UAE</a>
