--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
                     oil and gas sectors. Cryptofy coin is the game-changer.</p>
 
                 <p data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000" data-aos-once="false"
-                    class="text-center mt-4"><a class="btn btn-sm px-4 btn-block" href="#">BUY $CFYC</a></p>
+                    class="text-center mt-4"><a class="btn btn-sm px-4 btn-block" href="https://cryptofy.digital/">BUY
+                        $CFYC</a></p>
             </div>
 
             <div class="col-md-12 home-container-box-img">
