--- a/benefit.html
+++ b/benefit.html
@@ -153,7 +153,7 @@
                     <h6 class="widget-title">Our Product</h6>
                     <ul>
                         <p><a href="#" class="text-decoration-none text-white">CSC Chain</a> </p>
-                        <p><a href="#" class="text-decoration-none text-white">CFY Coin</a></p>
+                        <p><a href="#" class="text-decoration-none text-white">CFYC Coin</a></p>
                         <p><a href="#" class="text-decoration-none text-white">Cryptofy Games</a></p>
                         <p><a href="#" class="text-decoration-none text-white">Cryptofy Ecosystem</a></p>
                     </ul>
@@ -164,6 +164,9 @@
                     <ul>
                         <p><a href="#" class="text-decoration-none text-white">Metaverse</a></p>
                         <p><a href="#" class="text-decoration-none text-white">Virtual Reapty</a></p>
+                        <p><a href="#" class="text-decoration-none text-white">Blockchain</a></p>
+                        <p><a href="#" class="text-decoration-none text-white">Cryptocurrency</a></p>
+                        <p><a href="#" class="text-decoration-none text-white">Gold</a></p>
                         <p><a href="#" class="text-decoration-none text-white">Technology</a></p>
                         <p><a href="#" class="text-decoration-none text-white">Security</a></p>
                         <p><a href="#" class="text-decoration-none text-white">Education</a></p>
