--- a/index.html
+++ b/index.html
@@ -180,11 +180,9 @@
                     data-aos-duration="1000" data-aos-once="false">
                     <p class="text-center"></p>
                     <h1 class="text-center">$CFYD <img src="image/cfyd.jpg" class="img-fluid"></h1>
-                    <p class="text-center"><strong>$CFYD</strong> is a stable coin backed by gold and as our gold
-                        reserves
-                        increase we will
-                        release portion of the stables
-                        representing the gold value available for circulation.</p>
+                    <p class="text-center"><strong>$CFYD</strong> is The world's number one stablecoin, with the aim to
+                        provide liquidity for Dex, Cex, p2p
+                        all fiat transations. It’s backed by Fiat, Digital assets etc.</p>
                 </div>
 
             </div>
@@ -375,7 +373,7 @@
 
 
 
-        
+
         <!-- Footer section -->
         <footer class="footer-section bg-black p-4">
             <div class="container">
