--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                 <div class="row spad">
                     <div class="col-md-6 col-lg-3 footer-widget mt-5" data-aos="fade-up" data-aos-delay="100"
                         data-aos-duration="1000" data-aos-once="true">
-                        <h3><img src="image/icon.png" class="img-fluid" alt="">Cryptofy Coin</h3>
+                        <h3><img src="image/coin.png" class="img-fluid" alt="">Cryptofy Coin</h3>
                         <h3 class="pt-5">Get In Touch</h3>
 
                         <a href="https://info@cryptofycoin.com" class="text-decoration-none text-white"><i
