--- a/benefit.html
+++ b/benefit.html
@@ -9,7 +9,7 @@
         <title>Cryptofy Coin</title>
 
         <!-- web logo -->
-        <link rel="icon" href="image/icon.png" class="img-fluid">
+        <link rel="icon" href="image/coin.png" class="img-fluid">
 
         <!-- css -->
         <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -22,7 +22,7 @@
     <body>
         <nav class="navbar bg-body-tertiary fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand text-decoration-none" href="index.html"><img src="image/icon.png"
+                <a class="navbar-brand text-decoration-none" href="index.html"><img src="image/coin.png"
                         class="img-fluid">
                     Cryptofy Coin</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
