--- a/index.html
+++ b/index.html
@@ -163,7 +163,9 @@
                     <p class="box-text text-center">Every investment made by an investor or venture capitalist in
                         Cryptofy
                         Digital will first be used to purchase CRYPTOFY
-                        COIN
+                        COIN and also promote and manage the cryptofy digital
+                        ecosystem globally, inveestors will make lot of profits as the ecosystem brings in all streams
+                        of profit designed by the team
                     </p>
 
                     <p class="text-center"><a href="benefit.html" class="btn btn-sm btn-block px-4">Check Out</a></p>
