--- a/benefit.html
+++ b/benefit.html
@@ -99,7 +99,10 @@
                         data-aos-once="true">Every investment made by an investor or venture capitalist in Cryptofy
                         Digital
                         will first be used to purchase CRYPTOFY
-                        COIN, a mineral coin that will allow investors and capitalists to possess gold as a return on
+                        COIN and also promote and manage the cryptofy digital
+                        ecosystem globally, investors will make lot of profits as the ecosystem brings in all streams
+                        of profit designed by the team, a coin that will allow investors and capitalists to
+                        possess gold as a return on
                         investment. At the current
                         Gold LMBE pricing, this gold will cost investors less than 2% discount per kilogram.</p>
                 </div>
