--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         Cryptofy
                         Digital will first be used to purchase CRYPTOFY
                         COIN and also promote and manage the cryptofy digital
-                        ecosystem globally, inveestors will make lot of profits as the ecosystem brings in all streams
+                        ecosystem globally, investors will make lot of profits as the ecosystem brings in all streams
                         of profit designed by the team
                     </p>
 
@@ -344,22 +344,27 @@
             <div class="row partner-container">
                 <div class="col-md-3 partner-container-box" data-aos="fade-up" data-aos-delay="100"
                     data-aos-duration="1000" data-aos-once="false">
-                    <p class="text-center"><img src="image/1.jpg" class="img-fluid"></p>
+                    <p class="text-center"><img src="image/coinstore.jpg" class="img-fluid"></p>
                 </div>
 
                 <div class="col-md-3 partner-container-box" data-aos="fade-up" data-aos-delay="150"
                     data-aos-duration="1000" data-aos-once="false">
-                    <p class="text-center"><img src="image/2.jpg" class="img-fluid"></p>
+                    <p class="text-center"><img src="image/p2b.jpg" class="img-fluid"></p>
                 </div>
 
                 <div class="col-md-3 partner-container-box" data-aos="fade-up" data-aos-delay="200"
                     data-aos-duration="1000" data-aos-once="false">
-                    <p class="text-center"><img src="image/3.jpg" class="img-fluid"></p>
+                    <p class="text-center"><img src="image/bitmart.jpg" class="img-fluid"></p>
                 </div>
 
                 <div class="col-md-3 partner-container-box" data-aos="fade-up" data-aos-delay="250"
                     data-aos-duration="1000" data-aos-once="false">
-                    <p class="text-center"><img src="image/4.jpg" class="img-fluid"></p>
+                    <p class="text-center"><img src="image/mexc.jpg" class="img-fluid"></p>
+                </div>
+
+                <div class="col-md-3 partner-container-box" data-aos="fade-up" data-aos-delay="250"
+                    data-aos-duration="1000" data-aos-once="false">
+                    <p class="text-center"><img src="image/2.jpg" class="img-fluid"></p>
                 </div>
 
                 <div class="col-md-12">
