--- a/index.html
+++ b/index.html
@@ -364,6 +364,11 @@
 
                 <div class="col-md-3 partner-container-box" data-aos="fade-up" data-aos-delay="250"
                     data-aos-duration="1000" data-aos-once="false">
+                    <p class="text-center"><img src="image/bsc.jpg" class="img-fluid"></p>
+                </div>
+
+                <div class="col-md-3 partner-container-box" data-aos="fade-up" data-aos-delay="250"
+                    data-aos-duration="1000" data-aos-once="false">
                     <p class="text-center"><img src="image/2.jpg" class="img-fluid"></p>
                 </div>
 
