--- a/benefit.html
+++ b/benefit.html
@@ -38,7 +38,7 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="index.html">$CFYC</a>
+                                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="metaverse.html">Metaverse</a>
@@ -143,9 +143,6 @@
                             Hello@cryptofydigital.com</a>
                         <br>
 
-                        <a href="" class="text-decoration-none text-white"><i class="ti-location-pin"></i> Dubai,
-                            UAE</a>
-                        <br>
                         <span class="text-white">
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                             Copyright &copy;
