--- a/index.html
+++ b/index.html
@@ -369,8 +369,17 @@
 
                 <div class="col-md-3 partner-container-box" data-aos="fade-up" data-aos-delay="250"
                     data-aos-duration="1000" data-aos-once="false">
+                    <p class="text-center"><a href="https://www.dx.app/en"><img src="image/dxsale.jpg"
+                                class="img-fluid"></a></p>
+                </div>
+
+
+                <div class="col-md-3 partner-container-box" data-aos="fade-up" data-aos-delay="250"
+                    data-aos-duration="1000" data-aos-once="false">
                     <p class="text-center"><img src="image/2.jpg" class="img-fluid"></p>
                 </div>
+
+
 
                 <div class="col-md-12">
                     <p class="text-center"><a data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000"
