--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                     <li><a class="dropdown-item" href="#cfyd">$CFYD</a></li>
                                     <li><a class="dropdown-item" href="#blockchain">Blockchain</a></li>
                                     <li><a class="dropdown-item" href="#tokenomics">Tokenomics</a></li>
-                                    <li><a class="dropdown-item" href="file/Cryptofy whitepaper.pdf"
+                                    <li><a class="dropdown-item" href="file/CFYC WHITEPAPER.pdf"
                                             download="$CFYC whitepaper">Download
                                             Whitepaper</a></li>
                                     <li>
