--- a/metaverse.html
+++ b/metaverse.html
@@ -62,7 +62,7 @@
                                     <li><a class="dropdown-item" href="index.html#cfyd">$CFYD</a></li>
                                     <li><a class="dropdown-item" href="index.html#blockchain">Blockchain</a></li>
                                     <li><a class="dropdown-item" href="index.html#tokenomics">Tokenomics</a></li>
-                                    <li><a class="dropdown-item" href="file/Cryptofy whitepaper.pdf"
+                                    <li><a class="dropdown-item" href="file/CFYC WHITEPAPER.pdf"
                                             download="$CFYC whitepaper">Download
                                             Whitepaper</a></li>
                                     <li>
